@@ -31,6 +31,7 @@ public:
 // Operations
 public:
   void Init(const UINT nImageID, const UINT nDisabledImageID);
+  void ReInit(const UINT nImageID, const UINT nDisabledImageID); // to change images
   void SetStaticState(const bool state);
   BOOL OnRenderGlobalData(LPFORMATETC lpFormatEtc, HGLOBAL* phGlobal);
   void EndDrop() {m_bDropped = true;}
