@@ -22,7 +22,8 @@ actions that copied data to the clipboard.
 
 Changes to Existing Features in 3.17.2
 ======================================
-None
+New toolbar icon set has been replaced with icons based on famfamfam's
+silk set.
 
 New Features for 3.17.2
 =======================
